@@ -5,6 +5,10 @@ PHP                                                                        NEWS
 - Core:
   . Added support for new HTTP 451 code. (Julien)
 
+- SPL:
+  . Fixed bug #71202 (Autoload function registered by another not activated
+    immediately). (Laruence)
+
 - Standard:
   . Fixed bug #71190 (substr_replace converts integers in original $search
     array to strings). (Laruence)
